# awesome-sso

./: .gitignore  README.md  pyproject.toml  run_test.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  develop.yml  pr.yml  publish.yml  pypi_upload.yml
awesome_sso/client/: __init__.py  route.py  settings.py
awesome_sso/exceptions/: __init__.py
awesome_sso/mail/: mailgun.py
awesome_sso/service/: __init__.py  depends.py  route.py  service_registration.py  settings.py
awesome_sso/service/notification/: __init__.py  read_notification.py  schema.py  sync_notification.py
awesome_sso/service/user/: schema.py  sync_user.py
awesome_sso/store/: minio.py  mongo.py
awesome_sso/user/: depends.py  schema.py
awesome_sso/util/: constant.py  encode.py  jwt.py  response_error_check.py
tests/: conftest.py  test_minio.py
tests/datastore/: __init__.py  conftest.py  test_minio.py
tests/exceptions/: test_exceptions.py
tests/key_pairs/: test.key  test.key.pub
tests/mail/: conftest.py  test_mailgun.py
tests/service/: conftest.py  model.py  test_depends.py  test_service_registration.py  test_service_route.py  test_user.py
tests/user/: model.py  test_user.py
