[tool.poetry]
name = "awesome-sso"
version = "0.1.0"
description = "sso general utility for services connected to sso"
authors = ["Schwannden Kuo <schwannden@mobagel.com>"]

[tool.poetry.dependencies]
python = "~=3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.0"

