[tool.poetry]
name = "awesome-sso"
version = "0.1.2"
license = "Apache-2.0"
readme = "README.md"
description = "sso general utility for services connected to sso"
authors = ["Schwannden Kuo <schwannden@mobagel.com>"]
homepage = "http://gitlab.ct.mobagel.com:7979/MOD/awesome-sso"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
]
include = [
  "README.md",
]

[tool.poetry.dependencies]
python = "~=3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

